<resources>
    <string name="string_sjwz">手机网站</string>
    <string name="string_gl">管理</string>
    <string name="app_name">微企</string>
    <string name="string_wq">微企</string>
    <string name="photo_take">拍照</string>
    <string name="photo_pick">从相册选择</string>
    <string name="ablum_qyq">分享生意圈</string>
    <string name="ablum_save_local">保存照片到相册</string>
    <string name="add_relationship_people">和谁?</string>
    <string name="clip_succes_warn">复制成功</string>
    <string name="send_msg_string" formatted="fasel">这是我的手机网站：\n%s\n快来访问吧</string>
    <string name="main_string_warn">您已建立手机网站</string>
    <string name="main_string_warn1">点击这里完善资料吧</string>
    <string name="log_hint">您今天做了什么？</string>
    <string name="menu_xp">动态</string>
    <string name="menu_mpl">名片录</string>
    <string name="menu_fx">发现</string>
    <string name="menu_wo">我</string>
    <string name="dialog_loading">正在加载,请稍候...</string>
    <string name="dialog_comitting">正在提交,请稍候...</string>
    <string name="dialog_version">正在检测，请稍候...</string>
    <string name="no_data">暂无数据</string>
    <string name="err_data">获取失败，点击重试</string>
    <string name="string_wqxx">微企信息</string>
    <string name="string_auth_hint_name">请输入您的微企名称</string>
    <string name="string_auth_hint_intro">请输入您的微企简介</string>
    <string name="string_auth_com_pic">营业执照</string>
    <string name="string_auth_hint_addr">请输入您的微企地址</string>
    <string name="string_auth_connect_type">联系方式</string>
    <string name="string_auth_hint_mobile">请输入您的微企联系方式</string>
    <string name="string_auth_com_qydb">微企代表</string>
    <string name="string_auth_hint_frdb">请输入您的微企法人代表姓名</string>
    <string name="string_auth_btn_commit">提 交 申 请</string>
    <string name="string_auth_com_name">微企名称</string>
    <string name="string_auth_com_xz">微企性质</string>
    <string name="string_auth_com_addr">微企地址</string>
    <string name="string_auth_com_photo">微企联系电话</string>
    <string name="string_auth_com_intro">微企简介</string>
    <string name="string_auth_title">诚信认证申请</string>
    <string name="string_auth_form_warn_name">请填写单位名称</string>
    <string name="string_auth_form_warn_xz">请填写单位性质</string>
    <string name="string_auth_form_warn_addr">请填写单位地址</string>
    <string name="string_auth_form_warn_mobile">请填写联系电话</string>
    <string name="string_auth_form_warn_pic">请上传营业执照</string>
    <string name="string_auth_form_warn_intro">请填写微企简介</string>
    <string name="string_auth_form_warn_zz">请填写其他资质或获奖情况</string>
    <string name="string_auth_form_warn_db">请填写法人代表</string>
    <string name="string_auth_form_warn_read_xy">请阅读认证申请协议</string>
    <string name="string_auth_readxy">已阅读并同意</string>
    <string name="string_auth_rzxy">认证申请协议</string>
    <string name="string_auth_bz">备注:\n
         1.以上提供信息均正确属实\n
         2.以上信息将有指定区域代理商前去微企核实认证\n
         3.以上信息均保密，代理商处持有1份，公司总部持有1份</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">努力加载中...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="string_edit">编辑</string>
    <string name="string_update">更改</string>
    <string name="string_confirm">确 定</string>
    <string name="string_tj">提交</string>
    <string name="string_save">保 存</string>
    <string name="string_tg">跳 过</string>
    <string name="string_next_step">下一步</string>
    <string name="string_into">进入</string>
    <string name="string_complete">完成</string>
    <string name="string_new_add">添 加</string>
    <string name="string_upload">上传</string>
    <string name="string_del">删除</string>
    <string name="string_cacel">取消</string>
    <string name="string_back">返回</string>
    <string name="string_yl">预览</string>
    <string name="string_gd">更多</string>
    <string name="string_mobile_regex">手机格式错误</string>
    <string name="string_email_regex">邮箱格式错误</string>
    <string name="string_url_regex">网址格式错误</string>
    <string name="exit_app_hint">再点一次返回退出程序</string>
    <string name="exit_auth_hint">再点一次退出当前界面</string>
    <string name="login_edit_user_hint">请输入微企号</string>
    <string name="login_edit_userkey_hint">请输入密码</string>
    <string name="login_edit_userkey_hint_1">请再次输入密码</string>
    <string name="login_btn_login">登 录</string>
    <string name="register_arrow_warn">您还没有手机网站，戳一下"马"上有空间</string>
    <string name="login_string_xlwb">新浪微博登录</string>
    <string name="login_txt_findkey">忘记密码？</string>
    <string name="login_msg_user">请输入微企号</string>
    <string name="login_msg_userKey">请输入密码</string>
    <string name="login_waiting">正在认证,请稍后...</string>
    <string name="register_rep_pwd_warn">密码不一致</string>
    <string name="register_string_zc">注  册</string>
    <string name="register_edit_user_hint">6-20个非中文字符</string>
    <string name="register_edit_userkey_hint">请输入密码</string>
    <string name="register_edit_user_zw_warn">微企号不能包含中文</string>
    <string name="register_edit_user_sz_warn">微企号不能全为数字</string>
    <string name="register_edit_user_num_count_warn">微企号必须是6-20个非中文字符</string>
    <string name="register_edit_user_pwd_gf_warn">密码不能为中文</string>
    <string name="logoin_user_name">微&#160;企&#160;号:</string>
    <string name="logoin_user_pwd">密&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="logoin_user_pwd_confrim">确认密码:</string>
    <string name="register_name_hint">(6到20位英文或数字组合)</string>
    <string name="register_pwd_hint">(6到20位字符)</string>
    <string name="register_pwd_comfirm_hint">请再次填入密码</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="string_hint_no_str">未填写</string>
    <string name="string_limt_warm">字数不能超过%d</string>
    <string name="string_http_err_data">解析数据异常</string>
    <string name="sys_network_no_available">网络不可用，请稍后重试</string>
    <string name="sys_network_no_available1">网络不可用，请检查您的网络</string>
    <string name="sys_network_time_out">访问服务器超时，请稍后重试</string>
    <string name="string_http_err_failure">访问失败,请稍后重试</string>
    <string name="string_no_data_txt_rep">获取数据失败，请刷新重试</string>
    <string name="string_no_data_txt_add" formatted="false">%s暂无数据</string>
    <string name="string_no_data_btn_add">立 即 添 加</string>
    <string name="string_no_data_btn_rep">点 击 重 试</string>
    <string name="string_back_warn">是否退出当前界面?</string>
    <string name="string_dialog_update">更新</string>
    <string name="string_dialog_quit">退出</string>
    <string name="string_dialog_yes">是</string>
    <string name="string_dialog_no">否</string>
    <string name="string_dialog_qd">确定</string>
    <string name="string_ewm_title">二维码扫描</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="string_register_tj">输入企业名称</string>
    <string name="register_com_edit_hint">输入您的公司名称，寻找公司的小伙伴</string>
    <string name="register_com_gz">关注</string>
    <string name="register_com_ygz">已关注</string>
    <string name="register_com_edit_warn">请输入您的公司名称</string>
    <string name="card_relation_list_title">名片关系日志</string>
    <string name="register_com_search_explan">个人推荐</string>
    <string name="string_wzdl">我知道了</string>
    <string name="string_wszl">去完善资料</string>
    <string name="string_regi_dialog_title">欢迎来到微企!</string>
    <string name="string_regi_dialog_content">您的手机网站已建立，您的手机名片已生成，点击右上角完善资料信息\n您可以点击“名片录“右上角添加关注新名片</string>
    <string name="string_webview_dialog_content">您的手机网站已建立，您需要去完善‘%s’</string>
    <string name="string_webview_dialog_mp_content">您的手机名片已建立，您需要去完善‘%s’</string>
    <string name="string_webview_dialog_grxx">个人信息</string>
    <string name="string_wxts">温馨提示</string>
    <string name="string_del_pic_content">与这张图片同时上传的一组图片都会被删除</string>
    <string name="string_del_pro_content">确定要删除该产品吗?</string>
    <string name="dialog_ewm_title1">短信分享</string>
    <string name="dialog_ewm_title2">保存二维码</string>
    <string name="ewm_share_wq" formatted="false">我的微企二维码%s</string>
    <string name="ewm_share_mp" formatted="false">我的名片二维码%s</string>
    <string name="find_string_syq">生意圈</string>
    <string name="find_string_sys">扫一扫</string>
    <string name="find_string_pyp">换一换名片</string>
    <string name="find_string_btn_pyp_title">同时点击此处</string>
    <string name="find_string_cxrz">微企诚信认证</string>
    <string name="find_string_lxdl">联系代理</string>
    <string name="find_string_userCenter">应用中心</string>
    <string name="find_string_ad_Center">广告传媒中心</string>
    <string name="find_string_yqa_title">按一按</string>
    <string name="find_string_go_url">访问空间</string>
    <string name="find_string_attention">关注</string>
    <string name="find_string_title_anrency">联系代理</string>
    <string name="find_string_agency_addr">我们地址</string>
    <string name="find_string_agency_mobile">客服电话</string>
    <string name="find_string_agency_url">访问官网</string>
    <string name="find_string_msg_res">回复</string>
    <string name="find_string_ec_send">发送</string>
    <string name="find_string_ec_tip_msg">%s条新评论</string>
    <string name="find_string_ec_tip_msg_list_title">最新评论</string>
    <string name="find_string_ec_send_hint">请输入内容</string>
    <string name="find_string_ec_send_warn">请输入评论内容</string>
    <string name="find_string_ec_add_titile"></string>
    <string name="find_string_ec_add_pic_tip">发布图片</string>
    <string name="find_string_ec_add_content_tip">发布内容</string>
    <string name="find_string_ec_add_content_warn">请输入发布内容</string>
    <string name="find_string_ec_zan">赞</string>
    <string name="find_string_ec_yzan">已赞</string>
    <string name="find_string_ec_pl">评论</string>
    <string name="find_string_my_cir">我的生意圈</string>
    <string name="find_pyp_title">一起摇动手机换名片</string>
    <string name="find_pyp_title1">或者</string>
    <string name="find_pyp_again">请再试一次</string>
    <string name="find_tip_zan_title">赞了一下</string>
    <string name="find_tip_trade_detail_title">评论详情</string>
    <string name="find_sys_photo">相册</string>
    <string name="find_sys_light">闪光</string>
    <string name="find_ec_send_warn">%s条信息发布失败</string>
    <string name="find_ec_send_warn_item">发送失败，轻触以再次发送</string>
    <string name="find_ec_detail_count">共%d张</string>
    <string name="find_zh_title">展会</string>
    <string name="find_zs_title">招商</string>
    <string name="find_pmp_title">拍名片</string>
    <string name="find_date_now">刚刚</string>
    <string name="find_date_yesterday">昨天</string>
    <string name="find_date_q_yesterday">前天</string>
    <string name="find_date_pre_day">%s天前</string>
    <string name="find_date_pre_hour">%s小时前</string>
    <string name="find_date_pre_minute">%s分钟前</string>
    <string name="find_cir_share_link_title">分享了一个链接</string>
    <string name="find_cir_share_pro_title">分享了一个产品</string>
    <string name="find_cir_share_notice_title">分享了一个动态</string>
    <string name="visit_title">网站访问统计</string>
    <string name="visit_main_count_day">今日访问量（次）</string>
    <string name="visit_main_count_all">手机网站总访问量（次）</string>
    <string name="visit_main_count_all1">名片总访问量（次）</string>
    <string name="visit_main_count_week">近一周访问次数</string>
    <string name="visit_main_count_month">近一月访问次数</string>
    <string name="visit_main_count_quarter">近一季度访问次数</string>
    <string name="visit_main_count_year">近一年访问次数</string>
    <string name="visit_detail_today">%s（今天）</string>
    <string name="visit_detail_format_count">%s次</string>
    <string name="cir_add_warn_pic">请上传图片</string>
    <string name="cir_add_warn_content">请填写发布内容</string>
    <string name="add_title">您的手机网站已建立,请完善信息资料</string>
    <string name="linq_add_wqxx">完善微企信息</string>
    <string name="me_string_forget_pwd_title">忘记密码</string>
    <string name="me_string_wdbg">我的报告</string>
    <string name="me_string_tjgwd">提交给我的</string>
    <string name="me_string_csgwd">抄送给我的</string>
</resources>