<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fff" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/me_txt_title1"
                style="@style/tipStyle"
                android:layout_width="fill_parent"
                android:text="@string/string_wqxx" />

            <View
                style="@style/splitLineStyle"
                android:layout_marginLeft="0dp" />
            <!-- 企业名称 -->

            <EditText
                android:id="@+id/edit_com_name"
                style="@style/itemEidtStyle_no_arrow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="left|center_vertical"
                android:hint="@string/string_auth_hint_name"
                android:minHeight="50dp"
                android:padding="5dp"
                android:tag="0" />

            <View style="@style/splitLineStyle" />
            <!-- 企业简介 -->

            <EditText
                android:id="@+id/edit_com_intro"
                style="@style/itemEidtStyle_no_arrow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="left"
                android:hint="@string/string_auth_hint_intro"
                android:minHeight="80dp"
                android:padding="5dp"
                android:tag="0" />

            <!-- 营业执照 -->

            <View
                style="@style/splitLineStyle"
                android:layout_marginLeft="0dp" />

            <TextView
                android:id="@+id/me_txt_title1"
                style="@style/tipStyle"
                android:layout_width="fill_parent"
                android:text="@string/string_auth_com_pic" />

            <View
                style="@style/splitLineStyle"
                android:layout_marginLeft="0dp" />

            <LinearLayout
                android:id="@+id/layout_grid"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="#fff"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/img_add_pic"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/add_pic_click" />

                <com.wq.UI.horizontalListview.HorizontalVariableListView
                    android:id="@+id/auth_ablum_listview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:cacheColorHint="@android:color/transparent"
                    android:gravity="center"
                    android:listSelector="@android:color/transparent" >
                </com.wq.UI.horizontalListview.HorizontalVariableListView>
            </LinearLayout>
            <!-- 联系方式 -->

            <View
                style="@style/splitLineStyle"
                android:layout_marginLeft="0dp" />

            <TextView
                android:id="@+id/me_txt_title1"
                style="@style/tipStyle"
                android:layout_width="fill_parent"
                android:text="@string/string_auth_connect_type" />

            <View
                style="@style/splitLineStyle"
                android:layout_marginLeft="0dp" />
            <!-- 企业地址 -->

            <EditText
                android:id="@+id/edit_com_addr"
                style="@style/itemEidtStyle_no_arrow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="left|center_vertical"
                android:hint="@string/string_auth_hint_addr"
                android:minHeight="50dp"
                android:padding="5dp"
                android:tag="0" />

            <View style="@style/splitLineStyle" />
            <!-- 联系电话 -->

            <EditText
                android:id="@+id/edit_com_mobile"
                style="@style/itemEidtStyle_no_arrow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="left|center_vertical"
                android:hint="@string/string_auth_hint_mobile"
                android:minHeight="50dp"
                android:padding="5dp"
                android:tag="0" />

            <View
                style="@style/splitLineStyle"
                android:layout_marginLeft="0dp" />

            <TextView
                android:id="@+id/me_txt_title1"
                style="@style/tipStyle"
                android:layout_width="fill_parent"
                android:text="@string/string_auth_com_qydb" />

            <View
                style="@style/splitLineStyle"
                android:layout_marginLeft="0dp" />
            <!-- 企业代表 -->

            <EditText
                android:id="@+id/me_edit_qydb"
                style="@style/itemEidtStyle_no_arrow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="left|center_vertical"
                android:hint="@string/string_auth_hint_frdb"
                android:minHeight="50dp"
                android:padding="5dp"
                android:tag="0"
                android:text="郭方华" />

            <View style="@style/splitLineStyle" />

            <!-- 阅读协议 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/check_box"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/string_auth_readxy"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_read_rzxy"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/string_auth_rzxy"
                    android:textColor="#06a811"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/string_auth_bz"
                android:textSize="15sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_style_green"
                android:text="@string/string_auth_btn_commit"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>