<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <LinearLayout
        android:id="@+id/login_relate_main"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/login_img_login"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/no_data_img" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/string_sjwz"
                android:textColor="#7d7d7d"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|right"
                    android:text="@string/logoin_user_name"
                    android:textColor="#000"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/login_edt_user"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/login_edit_user_hint"
                    android:textColorHint="#ccc"
                    android:textSize="18sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|right"
                    android:text="@string/logoin_user_pwd"
                    android:textColor="#000"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/login_edt_userKey"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/login_edit_userkey_hint"
                    android:inputType="textPassword"
                    android:textColorHint="#ccc"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_btn_confirm"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_green_clickbg"
            android:text="@string/login_btn_login"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/me_string_forget_pwd_title"
            android:textColor="#2a54a9"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal|right"
                android:layout_marginBottom="80dp"
                android:layout_marginRight="15dp"
                android:text="@string/register_arrow_warn"
                android:textColor="#aaa"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal|right"
                android:layout_marginBottom="35dp"
                android:layout_marginRight="105dp"
                android:background="@drawable/register_arrow" />

            <Button
                android:id="@+id/login_btn_register"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_style_white"
                android:text="@string/register_string_zc"
                android:textColor="#666"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>