<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_popup_bg"
    android:orientation="vertical" >

    <Button
        android:id="@+id/popup_btn_takePhoto"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_style_alert_dialog_special"
        android:gravity="center"
        android:text="@string/photo_take"
        android:textColor="#000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/popup_btn_pickPhoto"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_style_alert_dialog_special"
        android:gravity="center"
        android:text="@string/photo_pick"
        android:textColor="#000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/popup_btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_style_alert_dialog_cancel"
        android:gravity="center"
        android:text="@string/string_cacel"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>